fixed layout issues

--- a/public/style.css
+++ b/public/style.css
@@ -36,7 +36,7 @@ body{
     font-weight: 400;
     line-height: 1.6;
     color: var(--color-grey-light-1);
-    background: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
+    background: linear-gradient(to right bottom, white, var(--color-grey-light-1));
     background-size: cover;
     background-repeat: no-repeat;
 
