--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -2,8 +2,10 @@
     display: flex;
     width: 100%;
     height: 10rem;
-    align-items: center;
     justify-content: space-between;
-    flex: 0 0 100%;
+    flex: 0 0 98%;
     align-items: stretch; //items use all height
+    background-color: #333;
+    margin: 1rem;
+    color: white;
   }
