--- a/src/components/Logo.scss
+++ b/src/components/Logo.scss
@@ -1,5 +1,4 @@
 .logo-box{
-    background-color: blue;
     margin-left: 2.5rem;
     width: 18%;
 }
