--- a/src/components/Navigation.scss
+++ b/src/components/Navigation.scss
@@ -1,4 +1,5 @@
 .navigation{
     width: 20%;
-    background-color: yellow;
+    background-color: black;
+    margin-left: 1rem;
 }
