--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -11,7 +11,7 @@
   }
   
   .post-text{
-    background-color: yellowgreen;
+    background-color: white;
     margin-left: 1rem;
     width: 100%;
     padding: 1.5rem;
