--- a/src/components/PostList.scss
+++ b/src/components/PostList.scss
@@ -5,4 +5,5 @@
     justify-content: center;
     flex-direction: column;
     margin-top: 3rem;
-  }
+    width: 75%;
+}
