--- a/src/components/Search.scss
+++ b/src/components/Search.scss
@@ -1,5 +1,4 @@
 .search-box{
-    background-color: purple;
     flex-grow: 1;
     display: flex;
     align-items: center;
