--- a/src/components/Settings.scss
+++ b/src/components/Settings.scss
@@ -1,6 +1,5 @@
 
 .settings-box{
-    background-color: green;
     margin-right: 3rem;
-    width: 10%;
+    width: 18%;
 }
